Newest version - lotsa bugfixes plus github source plus preset channels